# flipper-mcp-bridge

./: .gitignore  .mcp.json  README.md  pyproject.toml
scripts/: capture_once.py  fire.py  learn.py  smoketest_readonly.py  unit_checks.py
src/flipper_mcp_bridge/: __main__.py  flipper.py  http_api.py  ir.py  server.py
