[project]
name = "flipper-mcp-bridge"
version = "0.0.1"
description = "MCP server that bridges to a Flipper Zero over USB serial"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pyserial>=3.5",
]

[project.scripts]
flipper-mcp-bridge = "flipper_mcp_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flipper_mcp_bridge"]
